Bug 118582 - Signed signature lines can be signed again
Summary: Signed signature lines can be signed again
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Digital-Signature-Lines
  Show dependency treegraph
 
Reported: 2018-07-06 13:51 UTC by Samuel Mehrbrodt
Modified: 2018-11-06 14:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2018-07-06 13:51:18 UTC
Once a signature line is signed, it should not be possible to sign them again.
Comment 1 Xisco Faulí 2018-07-11 11:59:56 UTC
Moving to NEW
Comment 2 Commit Notification 2018-11-06 14:01:29 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7b6f477799d55d80775b6120ba0b5ce1bb45fb3c%5E%21

tdf#118582 Disable signature line signing once it is signed

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.