tdf#118582 Disable signature line signing once it is signed

Change-Id: I720d7d4920ae9c2f5d74ad827e1e214a62fe81a9
Reviewed-on: https://gerrit.libreoffice.org/62947
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit 7b6f477799d55d80775b6120ba0b5ce1bb45fb3c)